# dbsface-dissertation-audit

./: .gitignore  DATA_AVAILABILITY.md  README_FINAL_SUBMISSION.md  RUN_REPRODUCTION.md  SHA256_MANIFEST.txt  main.py  pyproject.toml  requirements.txt
latex_project/: abstract.tex  acknowledgements.tex  declaration.tex  main.tex  project_specification.tex  ref.bib  title_page.tex
latex_project/appendix/: appendices.tex
latex_project/chapters/: conclusion.tex  discussion.tex  introduction.tex  literature_review.tex  methods.tex  results.tex
models/: baseline_mlp_numpy.npz
outputs/advanced_models/: final_model_benchmark_bootstrap_ci.csv  final_model_benchmark_summary.csv
outputs/aev/: aev_test.csv  region_only_metrics.csv  region_only_metrics.json  region_only_predictions.csv  roi_class_comparison.csv  roi_class_comparison_ranked.csv  roi_occlusion_boxplot_data.csv  roi_occlusion_size_normalized.csv  roi_occlusion_summary_by_class.csv  roi_occlusion_summary_overall.csv  roi_occlusion_test.csv  roi_size_confound_metrics.json
outputs/baseline/: metrics.json  pr_curve.csv  predictions_test.csv  predictions_train.csv  predictions_val.csv  roc_curve.csv  training_curve.csv
outputs/calibration/: calibration_metrics.json  reliability_bins.csv
outputs/confound_net_increment/: confound_net_increment.json  (+1 more)
scripts/: 01_prepare_data_and_roi.py  02_run_fair_benchmark.py  02_train_baseline.py  03_run_core_audit.py  03_run_explanations.py  04_run_robustness.py  05_run_dynamic_roi_and_gradcam.py  06_make_figures.py  confound_net_increment.py
src/dbsface/: __init__.py  (+2 more)
(+104 files in other folders)
